--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -32,7 +32,7 @@ import init.carrier.rc
 on early-init
     setprop sys.boot_completed 0
 
-    export LD_SHIM_LIBS /system/lib/libril.so|libril_shim.so:rmt_storage|librmt_shim.so
+    export LD_SHIM_LIBS /system/lib/libril.so|libril_shim.so
 
     write /sys/block/mmcblk0/queue/read_ahead_kb 512
     write /sys/block/mmcblk0/queue/scheduler noop
@@ -470,6 +470,8 @@ service macloader /system/bin/macloader
     oneshot
 
 on property:init.svc.macloader=stopped
+    chown system root /data/.cid.info
+    chmod 0664 /data/.cid.info
     chown system root /data/.rev
     chmod 0664 /data/.rev
 # end of wifi
