--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -146,6 +146,9 @@ on boot
     mkdir /dev/socket/qmux_gps 0770 gps gps
     chmod 2770 /dev/socket/qmux_gps
 
+    # 4.3 requires this
+    chmod 0644 /proc/cmdline
+
     #Remove SUID bit for iproute2 ip tool
     chmod 0755 /system/bin/ip
 
